err/uvtor.err
Listing '.'...
Listing './bin'...
Compiling './bin/pwiz.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiocache'...
Listing './lib/python3.5/site-packages/aiocache/backends'...
Listing './lib/python3.5/site-packages/aiocache-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/aiopg'...
Listing './lib/python3.5/site-packages/aiopg/sa'...
Listing './lib/python3.5/site-packages/aiopg-0.13.2.dist-info'...
Listing './lib/python3.5/site-packages/cached_property-1.3.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/peewee-2.10.2.egg-info'...
Listing './lib/python3.5/site-packages/peewee_async-0.5.10.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/playhouse'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/python_nginx-1.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/ujson-1.35.egg-info'...
Listing './lib/python3.5/site-packages/uvloop'...
Listing './lib/python3.5/site-packages/uvloop/handles'...
Listing './lib/python3.5/site-packages/uvloop/includes'...
Listing './lib/python3.5/site-packages/uvloop-0.9.1.dist-info'...
Listing './lib/python3.5/site-packages/uvtor'...
Listing './lib/python3.5/site-packages/uvtor/_templates'...
Listing './lib/python3.5/site-packages/uvtor/_templates/app_template'...
Listing './lib/python3.5/site-packages/uvtor/_templates/app_template/handlers'...
Listing './lib/python3.5/site-packages/uvtor/_templates/app_template/handlers/v0'...
Listing './lib/python3.5/site-packages/uvtor/_templates/app_template/routes'...
Listing './lib/python3.5/site-packages/uvtor/_templates/app_template/routes/v0'...
Listing './lib/python3.5/site-packages/uvtor/_templates/project_template'...
Listing './lib/python3.5/site-packages/uvtor/_templates/project_template/apps'...
Listing './lib/python3.5/site-packages/uvtor/_templates/project_template/models'...
Listing './lib/python3.5/site-packages/uvtor/_templates/project_template/tasks'...
Listing './lib/python3.5/site-packages/uvtor/_templates/project_template/tests'...
Listing './lib/python3.5/site-packages/uvtor/_templates/test_template'...
Listing './lib/python3.5/site-packages/uvtor/bin'...
Listing './lib/python3.5/site-packages/uvtor/conf'...
Listing './lib/python3.5/site-packages/uvtor/core'...
Compiling './lib/python3.5/site-packages/uvtor/core/__init__.py'...
***   File "./lib/python3.5/site-packages/uvtor/core/__init__.py", line 31
    f'apps/{appname}/routes',
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uvtor/core/cache'...
Listing './lib/python3.5/site-packages/uvtor/core/decorators'...
Listing './lib/python3.5/site-packages/uvtor/core/management'...
Listing './lib/python3.5/site-packages/uvtor/core/management/commands'...
Compiling './lib/python3.5/site-packages/uvtor/core/management/commands/createapp.py'...
***   File "./lib/python3.5/site-packages/uvtor/core/management/commands/createapp.py", line 104
    print(f'Successfully create app {_appname}')
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uvtor/core/management/commands/createdb.py'...
***   File "./lib/python3.5/site-packages/uvtor/core/management/commands/createdb.py", line 36
    cur.execute(f'CREATE DATABASE {_name} ;')
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uvtor/core/management/commands/createproj.py'...
***   File "./lib/python3.5/site-packages/uvtor/core/management/commands/createproj.py", line 53
    print(f'Successfully create project {_projname}')
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uvtor/core/management/commands/dropdb.py'...
***   File "./lib/python3.5/site-packages/uvtor/core/management/commands/dropdb.py", line 36
    cur.execute(f'DROP DATABASE {_name} ;')
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uvtor/core/management/commands/makemigrations.py'...
***   File "./lib/python3.5/site-packages/uvtor/core/management/commands/makemigrations.py", line 59
    _model = f'models.{_model}'
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uvtor/core/management/commands/removeapp.py'...
***   File "./lib/python3.5/site-packages/uvtor/core/management/commands/removeapp.py", line 26
    print(f'Successfully remove app {_appname}')
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uvtor/core/management/commands/runapp.py'...
***   File "./lib/python3.5/site-packages/uvtor/core/management/commands/runapp.py", line 62
    logging.info(f'Server started, listen on {_address}:{_port}')
                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uvtor/core/management/commands/runtests.py'...
***   File "./lib/python3.5/site-packages/uvtor/core/management/commands/runtests.py", line 21
    module_ = __import__(f'tests.{_module}')
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uvtor/db'...
Listing './lib/python3.5/site-packages/uvtor/db/migrations'...
Listing './lib/python3.5/site-packages/uvtor/db/models'...
Listing './lib/python3.5/site-packages/uvtor/utils'...
Compiling './lib/python3.5/site-packages/uvtor/utils/config.py'...
***   File "./lib/python3.5/site-packages/uvtor/utils/config.py", line 33
    _upstream.append(nginx.Key('server', f'127.0.0.1:{_port}'))
                                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uvtor-0.0.16.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
